--- a/tiktok-app/package.json
+++ b/tiktok-app/package.json
@@ -32,6 +32,8 @@
     "tailwindcss": "^3.4.4"
   },
   "scripts": {
+    "install": "react-scripts install",
+    "start": "react-scripts start",
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
