--- a/tiktok-app/package.json
+++ b/tiktok-app/package.json
@@ -37,7 +37,7 @@
     "build": "CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "seeds": "node ./src/services/seeds/index.js"
+    "seeds": "node ./src/index.js"
   },
   "eslintConfig": {
     "extends": [
