--- a/tiktok-app/package.json
+++ b/tiktok-app/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.16.0",
     "@tippyjs/react": "^4.2.6",
+    "react-stomp-hooks": "^2.1.0",
     "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "flowbite": "^2.3.0",
